greatly cleaned up decode_video

--- a/parse_tcpstream/Makefile
+++ b/parse_tcpstream/Makefile
@@ -1,2 +1,2 @@
-decode_video: decode_video.c
-	gcc decode_video.c -lswscale -lavcodec -lavutil -o decode_video
+decode_video: decode_video.cpp
+	g++ decode_video.cpp -lswscale -lavcodec -lavutil -o decode_video
