--- a/parse_tcpstream/CMakeLists.txt
+++ b/parse_tcpstream/CMakeLists.txt
@@ -32,6 +32,7 @@ INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS} ${OpenCV_INCLUD
 LINK_LIBRARIES(${Boost_LIBRARIES} ${PYTHON_LIBRARIES} -lswscale -lavcodec -lavutil ${OpenCV_LIBS} ${CMAKE_THREAD_LIBS_INIT}) # Deprecated but so convenient!
 
 PYTHON_ADD_MODULE(libcopter python_wrapper.cpp decode_video.cpp sg500.cpp)
+PYTHON_ADD_MODULE(libsg500 sg500.cpp sg500_py.cpp decode_video.cpp)
 #FILE(COPY MyProject.py DESTINATION .) # See the whole tutorial to understand this line
 
 add_executable(test_cpp decode_video.cpp sg500.cpp test_cpp.cpp)
